--- a/build.xml
+++ b/build.xml
@@ -5,7 +5,7 @@
     <property environment="env" />
     <path id="classpath">
         <pathelement location="${JUNIT_DIR}" />
-        <pathelement location="${env.CLASSPATH}" />
+        <pathelement path="${env.CLASSPATH}" />
     </path>
 
     <target name="all"
