junity.py: move build.xml to test/build.xml

--- a/test/build.xml
+++ b/test/build.xml
@@ -1,10 +1,10 @@
 <project default="all">
 
-    <property name="JUNIT_DIR" location="test/junit" />
+    <property name="junit.dir" location="junit" />
 
     <property environment="env" />
     <path id="classpath">
-        <pathelement location="${JUNIT_DIR}" />
+        <pathelement location="${junit.dir}" />
         <pathelement path="${env.CLASSPATH}" />
     </path>
 
@@ -12,7 +12,7 @@
             depends="test" />
 
     <target name="compile">
-        <javac srcdir="${JUNIT_DIR}"
+        <javac srcdir="${junit.dir}"
                includeantruntime="false">
             <classpath refid="classpath" />
         </javac>
@@ -20,8 +20,8 @@
 
     <target name="clean">
         <delete>
-            <fileset dir="${JUNIT_DIR}" includes="*.class" />
-            <fileset dir="${JUNIT_DIR}" includes="*.xml" />
+            <fileset dir="${junit.dir}" includes="*.class" />
+            <fileset dir="${junit.dir}" includes="*.xml" />
         </delete>
     </target>
 
@@ -31,7 +31,7 @@
             <classpath refid="classpath" />
             <formatter type="xml" />
             <test name="ExampleTest"
-                  todir="${JUNIT_DIR}"
+                  todir="${junit.dir}"
                   outfile="ExampleTest" />
         </junit>
     </target>
